alteração de conteúdo

--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,7 @@ header{
 }
 
 body{
-	background: #fff;
+	background: #e9e8e9;
   	color: #666666;
 }
 
@@ -31,7 +31,7 @@ img{
 }
 
 .pl p{
-	font-size: 14px;
+	font-size: 16px;
 	padding: 10px;
 }
 
