--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,8 @@ header{
 }
 
 body{
-	background: #e9e8e9;
+	/*background: #e9e8e9;*/
+	background-color: #fff;
   	color: #666666;
 }
 
@@ -41,6 +42,6 @@ img{
 
 footer{
     position:absolute;
-    bottom:5px;
+    bottom:10px;
     width:100%;
 }
