--- a/estilo.css
+++ b/estilo.css
@@ -13,10 +13,22 @@ img{
 	width: 110px;
 }
 
+p.italic{
+	font-style: oblique;
+	padding: 0px !important;
+	margin: 0px;
+}
+
 @media (min-width: 992px) {
   .fright {
-  	margin-top: 100px;
+  	margin-top: 50px;
   }
+}
+
+@media (max-width: 991px){
+	.fright {
+	margin-top: 10px;
+	}
 }
 
 .content {
@@ -41,6 +53,7 @@ img{
 
 .fright {
 	float:right;
+
 }
 
 footer{
