--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@ header{
 body{
 	/*background: #e9e8e9;*/
 	background-color: #fff;
-  	color: #666666;
+	color: #666666;
 }
 
 img{
@@ -24,18 +24,18 @@ p.post{
 }
 
 @media (min-width: 992px) {
-  .fright {
-  	margin-top: 50px;
-  }
+	.margin {
+		margin-top: 50px;
+	}
 
-  footer{
-  	position: absolute;
-  }
+	footer{
+		position: absolute;
+	}
 }
 
 @media (max-width: 991px){
-	.fright {
-	margin-top: 10px;
+	.margin {
+		margin-top: 10px;
 	}
 }
 
@@ -43,32 +43,20 @@ p.post{
 	overflow:hidden;
 }
 
-.aside {
-	width:200px;
-}
-
-.fleft {
-	float:left;
-}
-
 .pl p{
-	font-size: 16px;
 	padding: 10px;
 }
 
-.fb {
-}
-
-.fright {
-	float:right;
-
+.section-header {
+	margin-top: 60px;
+	margin-bottom: 30px;
 }
 
 nav .nav-bar {
-    background-color: mediumaquamarine;
+	background-color: mediumaquamarine;
 }
 
 footer{
-    bottom:10px;
-    width:100%;
+	bottom:10px;
+	width:100%;
 }
