--- a/estilo.css
+++ b/estilo.css
@@ -4,10 +4,11 @@ header{
 
 body{
 	/*background: #e9e8e9;*/
-	background-color: #fff;
-	color: #fff;
-	background-image: url("img/florest-res.jpg");
+	background: #fff;
+	color: #000;
+	/*background-image: url("img/florest-res.jpg");*/
 	background-repeat: repeat;
+	filter: alpha(opacity=80);
 }
 
 img{
@@ -16,7 +17,7 @@ img{
 }
 
 a{
-	color: #fff;
+	color: #000;
 }
 
 a:hover {
@@ -59,7 +60,7 @@ p.post{
 
 .pl p{
 	padding: 10px;
-	background-color: #000;
+	/*background-color: #fff;*/
 	border-radius: 10px;
 	padding: 5px;
 	border-spacing: 10px;
@@ -67,7 +68,8 @@ p.post{
 
 .pr p{
 	padding: 10px;
-	background-color: #000;
+	/*background-color: #fff;
+	opacity: 0.7;*/
 	border-radius: 10px;
 	padding: 5px;
 	border-spacing: 10px;
