--- a/estilo.css
+++ b/estilo.css
@@ -1,108 +1,135 @@
-header{
-
+@import "https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap";
+:root {
+	--bg-color: #282a36;
+	--bg-color-header: rgba(0, 0, 0, 0.1);
+	--bg-color-dark: #e9e8e9;
+	--text-color: #fff;
+	--color-green: #50fa7b;
 }
 
-body{
-	/*background: #e9e8e9;*/
-	background: #fff;
-	color: #000;
-	/*background-image: url("img/florest-res.jpg");*/
-	background-repeat: repeat;
-	filter: alpha(opacity=80);
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-img#perfil{
-	margin-top: 60px;
-	width: 50%;
+header {
+	background: var(--bg-color-header);
+	color: var(--text-color);
+	border-bottom: 1px solid #333;
 }
 
-img{
-	margin-top: 60px;
-	width: 20%;
+body {
+	background-color: var(--bg-color);
+	color: var(--text-color);
+	/* font-family: 'Source Code Pro', monospace; */
+	font-size: 1rem;	
 }
 
-a{
-	color: #000;
+a {
+	color: var(--text-color);
 }
 
 a:hover {
-	color: #000;
+	color: var(--color-green);
+	text-decoration: none;
 }
 
-h4{
-	color: #000;
+a.active {
+	border-bottom: 3px solid;
+	border-color: var(--color-green);
 }
 
-p.italic{
-	font-style: oblique;
-	padding: 0px !important;
-	margin: 0px;
+button {
+	color: var(--text-color);
 }
 
-p.post{
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	padding: 0 2rem 1rem 2rem;
+}
+
+#profile {
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	max-width: 700px;
+}
+
+#profile .profile-image {
+	border-radius: 50%;
+	border: 0.05rem solid var(--color-green);
+	margin: 0.5rem;
+	width: 200px;
+}
+
+p.italic {
+	margin-bottom: 0;
+}
+
+p.contact {
+	margin-right: 0.3rem;
+}
+
+.profile-social {
+	display: flex;
+	flex: 1;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.profile-social a {
+	padding: 0.5rem;
+}
+
+#content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	max-width: 700px;
+}
+
+#content-page h2{
+	padding-top: 2rem;
+
+}
+
+#content .content-text {
 	text-align: justify;
 }
 
-@media (min-width: 992px) {
-	.margin {
-		margin-top: 50px;
+.footer-links {
+	display: flex;
+	align-items: center;
+}
+
+footer {
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+
+	padding: 1rem;
+ }
+
+.italic {
+	font-style: oblique;
+}
+
+@media (max-width: 720px) {
+	#profile .profile-image {
+		width: 150px;
 	}
 
-	footer{
-		position: absolute;
+	a.active {
+		border-bottom: 0;
+		border-left: 2px solid;
+		border-color: var(--color-green);
+		padding-left: 8px !important;
 	}
 }
-
-@media (max-width: 991px){
-	.margin {
-		margin-top: 10px;
-	}
-
-	img#perfil{
-		margin-top: 60px;
-		width: 30%;
-	}
-
-	img{
-		margin-top: 60px;
-		width: 30%;
-	}
-}
-
-.content {
-	overflow:hidden;
-}
-
-.pl p{
-	padding: 10px;
-	/*background-color: #fff;*/
-	border-radius: 10px;
-	padding: 5px;
-	border-spacing: 10px;
-}
-
-.pr p{
-	padding: 10px;
-	/*background-color: #fff;
-	opacity: 0.7;*/
-	border-radius: 10px;
-	padding: 5px;
-	border-spacing: 10px;
-}
-
-.section-header {
-	margin-top: 60px;
-	margin-bottom: 30px;
-}
-
-nav .nav-bar {
-	background-color: mediumaquamarine;
-}
-
-footer{
-	bottom: 10px;
-	width: 100%;
-	color: #fff;
-
-}
-
